# hello-world-on-android-native

./: CMakeLists.txt
src/: main.cpp
